# gerador-relatorios-vendas

./: .gitignore  README.md  cli.py  core.py  pyproject.toml  vendas_exemplo.csv
docs/codigo_comentado/: README.md  cli_comentado.py  core_comentado.py  pyproject_comentado.md  test_core_comentado.py
tests/: test_core.py
